<resources>
    <string name="app_name">Adarsh Collaborate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_file_new">FileNew</string>
    <string name="ok">Ok</string>

    <string name="network_message">There is no network connection \n at the moment.Try again later</string>
    <string name="connection_message">Oops!!! Connection is slow, please try again.</string>
    <string name="time_out_message">Sorry!!! Connection time out, please try again.</string>
    <string name="authentication_message">You are not authorize user to do this event&#8230;</string>
    <string name="parsing_message">Oops!!! error in parsing data, please try again.</string>
    <string name="server_message">Sorry!!! could not get data from server, please try again.</string>
    <string name="cache_message">Unable to load data from cache</string>

    <string name="spinner_group">Select Group</string>


    <string name="name_of_task">Name Of The Task</string>
    <string name="enter_name_of_task">Enter Name Of The Task </string>

    <string name="task_des">Task Description </string>
    <string name="enter_task_des">Enter Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="sub_topic_title">Sub Topics</string>
    <string name="visible_to_department">Visible to department</string>
    <string name="select_department">Select Department</string>
    <string name="visible_to_branch">Visible to branches</string>
    <string name="select_branch">Select Branches</string>
    <string name="json_error">Parsing Erroe</string>
    <string name="title_activity_maps">Map</string>


</resources>
